# rules_ai

./: .bazelignore  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE  deps.bzl  python_defs.bzl  requirements.bzl
.github/: cspell.yaml  renovate.json
.github/workflows/: bazel.yml  cron-bump-requirements.yml
bzl/patches/: chickenandpork-i686-mostly-acts-like-x86_64.patch
doc/: QUICKSTART.md
examples/demo_env_from_sops/: .sops.yaml  BUILD.bazel  WORKSPACE  sops_api_keys.yaml
examples/demo_env_from_yaml/: BUILD.bazel  README.md  WORKSPACE  sops_decrypt.yaml  test.py
examples/demo_nvcc/: BUILD.bazel  README.md  hello_test.cu  hello_world.cu  host_check.cu
examples/demo_nvrtc/: BUILD.bazel  nvrtc_test.cu
examples/demo_rules_python/: BUILD.bazel  README.md  WORKSPACE  requirements_lock.txt
examples/demo_vendored_requirements/: BUILD.bazel  WORKSPACE  test.py
examples/huggingface-transformer-distilgpt2/: main.py
examples/huggingface_transformer_distilgpt2/: BUILD.bazel  README.md  WORKSPACE  main.py  test.py
examples/huggingface_transformer_fillmask/: README.md  WORKSPACE  main.py  test.py
examples/huggingface_transformer_named_entity_recognition/: README.md  WORKSPACE  main.py  test.py
examples/huggingface_transformer_question_answering/: README.md  WORKSPACE  main.py  test.py
lib/python/: BUILD.bazel  envexport.bzl  envexport.py  requirements.in  requirements.txt  requirements_darwin.txt  requirements_linux.txt  requirements_windows.txt
tests/: BUILD.bazel  helloworld.py  helloworld_test.py  sysinfo_test.py
tools/: Dockerfile  README.md  requirements_update.bash
