#load("@python39//:defs.bzl", "interpreter")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pypi//:requirements.bzl", "requirement")

py_library(
    name = "helloworld",
    srcs = ["helloworld.py"],
)

py_test(
    name = "message_test",
    size = "small",
    srcs = ["helloworld_test.py"],
    main = "helloworld_test.py",
    deps = [":helloworld"],
)

py_test(
    name = "sysinfo_test",
    size = "small",
    srcs = ["sysinfo_test.py"],
    main = "sysinfo_test.py",
    tags = [ "manual" ],   # hermetic toolchain is failing; remove this to cut the commit charge and revisit hermeticity
    #deps = [ requirement("requests") ],  # I found that deps brings in an implicit connection to the toolchain?
)
