load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_test(
    name = "test",
    size = "small",
    srcs = ["test.py"],
    data = ["sops_decrypt.yaml"],
    env = {"SOPS": "sops_decrypt.yaml"},
    deps = [
        "@pypi_pyyaml//:pkg",
        "@rules_ai//lib/python:envexport",
    ],
)
